# Warrior

./: README.md
Config/: DefaultEngine.ini  (+2 more)
Source/Warrior/: CMakeLists.txt  Warrior.Build.cs  WarriorCharacter.cpp  WarriorCharacter.h  WarriorGameMode.cpp
Source/Warrior/Private/: WarriorGameplayTags.cpp
Source/Warrior/Private/AbilitySystem/Abillities/: WarriorGameplayAbility.cpp
Source/Warrior/Private/AnimInstances/: WarriorCharacterAnimInstance.cpp
Source/Warrior/Private/Characters/: WarriorBaseCharacter.cpp  WarriorHeroCharacter.cpp
Source/Warrior/Private/Components/Input/: WarriorEnhancedInputComponent.cpp
Source/Warrior/Private/DataAssets/Inputs/: DataAsset_InputConfig.cpp
Source/Warrior/Private/DataAssets/StartupData/: DataAsset_StartupDataBase.cpp
Source/Warrior/Private/GameModes/: WarriorGameModeBase.cpp
Source/Warrior/Private/Items/Weapons/: WarriorWeaponBase.cpp
Source/Warrior/Public/: WarriorDebugHelper.h  WarriorGameplayTags.h
Source/Warrior/Public/AbilitySystem/Abillities/: WarriorGameplayAbility.h
Source/Warrior/Public/AnimInstances/: WarriorCharacterAnimInstance.h
Source/Warrior/Public/AnimInstances/Hero/: WarriorHeroAnimInstance.h
Source/Warrior/Public/Characters/: WarriorBaseCharacter.h  WarriorHeroCharacter.h
Source/Warrior/Public/Components/Input/: WarriorEnhancedInputComponent.h
Source/Warrior/Public/DataAssets/Inputs/: DataAsset_InputConfig.h
Source/Warrior/Public/DataAssets/StartupData/: DataAsset_HeroStartupData.h  DataAsset_StartupDataBase.h
Source/Warrior/Public/Items/Weapons/: WarriorWeaponBase.h
(+20 files in other folders)
